[gd_scene load_steps=6 format=3 uid="uid://dvcv6e0srmm5r"]

[ext_resource type="Script" path="res://Interface/Menu/menuOptions.gd" id="1_k5t45"]
[ext_resource type="FontFile" uid="uid://b572bvrcrok26" path="res://Fontes/Press_Start_2P/PressStart2P-Regular.ttf" id="2_0gbpl"]
[ext_resource type="Script" path="res://Interface/Menu/button_shadow.gd" id="3_br6j1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqsdc"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_531sw"]
bg_color = Color(0, 0, 0, 1)
corner_detail = 1

[node name="MenuOptions" type="Control" node_paths=PackedStringArray("init_button")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k5t45")
init_button = NodePath("ConfigPanel/OptionsContainer/Init")
metadata/_edit_pinned_properties_ = [&"init_button"]

[node name="ConfigPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -94.0
offset_right = 271.0
offset_bottom = 499.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rqsdc")

[node name="OptionsContainer" type="VBoxContainer" parent="ConfigPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = 1.0
offset_right = 324.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="Init" type="Button" parent="ConfigPanel/OptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0gbpl")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_531sw")
text = "Iniciar"
flat = true

[node name="shadow" type="Label" parent="ConfigPanel/OptionsContainer/Init"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -36.0
offset_right = 228.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_0gbpl")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
script = ExtResource("3_br6j1")

[node name="Continue" type="Button" parent="ConfigPanel/OptionsContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0gbpl")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_531sw")
text = "Continuar"
flat = true

[node name="shadow" type="Label" parent="ConfigPanel/OptionsContainer/Continue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -36.0
offset_right = 228.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_0gbpl")
theme_override_font_sizes/font_size = 64
text = "
"
horizontal_alignment = 1
script = ExtResource("3_br6j1")

[node name="Config" type="Button" parent="ConfigPanel/OptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0gbpl")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_531sw")
text = "Configurações"
flat = true

[node name="shadow" type="Label" parent="ConfigPanel/OptionsContainer/Config"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -36.0
offset_right = 228.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_0gbpl")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
script = ExtResource("3_br6j1")

[node name="Exit" type="Button" parent="ConfigPanel/OptionsContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0gbpl")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_531sw")
text = "Sair"
flat = true

[node name="shadow" type="Label" parent="ConfigPanel/OptionsContainer/Exit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -36.0
offset_right = 228.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(0.923959, 1.51612e-06, 1.15514e-06, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_fonts/font = ExtResource("2_0gbpl")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
script = ExtResource("3_br6j1")

[connection signal="pressed" from="ConfigPanel/OptionsContainer/Init" to="." method="_on_init_pressed"]
[connection signal="pressed" from="ConfigPanel/OptionsContainer/Config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="ConfigPanel/OptionsContainer/Exit" to="." method="_on_exit_pressed"]
